tests/ui/derive/fail_validate_duplicate_rule_message.rs
#[derive(foundry::Validate)]
struct DuplicateRuleMessage {
    #[validate(required(message = "First", message = "Second"))]
    email: String,
}

fn main() {}
